Fixed scrollbars bug

--- a/src/styles/App.css
+++ b/src/styles/App.css
@@ -101,8 +101,8 @@ body {
   z-index: 1000;
   display: grid;
   grid-template-rows: auto;
-  grid-template-columns: 15px 40px 15px auto 48px;
-  grid-template-areas: ". icon . title button";
+  grid-template-columns: 15px 40px 15px auto 66px;
+  grid-template-areas: ". icon . title buttons";
 }
 
 .deviceIconBig {
@@ -118,7 +118,7 @@ body {
 }
 
 .mainBodyHeaderIcon {
-  grid-area: button;
+  grid-area: buttons;
   color: white;
 }
 
